--- a/ecomm/ecomm/templates/base.html
+++ b/ecomm/ecomm/templates/base.html
@@ -80,11 +80,29 @@
                             </div>
                         </div>
                     </div>
-                    {% if request.user.is_authenticated%}
+                    <form class="modal fade" id="templatemo_search" action="{% url 'toko:product_search' %}" method="GET">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Search Products</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <input type="text" name="keyword" class="form-control" placeholder="Search...">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-success">Search</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
                     <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal"
                         data-bs-target="#templatemo_search">
                         <i class="fa fa-fw fa-search text-dark mr-2"></i>
                     </a>
+                    {% if request.user.is_authenticated%}
+
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'toko:order-summary' %}">
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                         <span
