--- a/ecomm/ecomm/templates/base.html
+++ b/ecomm/ecomm/templates/base.html
@@ -96,11 +96,12 @@
                             </div>
                         </div>
                     </form>
-
+                    {% if show_search_icon %}
                     <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal"
                         data-bs-target="#templatemo_search">
                         <i class="fa fa-fw fa-search text-dark mr-2"></i>
                     </a>
+                    {% endif %}
                     {% if request.user.is_authenticated%}
 
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'toko:order-summary' %}">
