[MODIFY] Link to detail products

--- a/ecomm/ecomm/templates/carousel.html
+++ b/ecomm/ecomm/templates/carousel.html
@@ -36,13 +36,11 @@
                     {% if object_list %}
                         {% for pItem in object_list %}
                         <div class="col-md-4">
+                        <a href="{{ pItem.get_absolute_url }}" class="text-decoration-none">
                             <div class="card mb-4 product-wap rounded-0">
                                 <div class="card rounded-0">
                                     <img class="card-img rounded-0 img-fluid" src="{{ pItem.gambar.url }}" style="height: 300px;">
                                     <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
-                                        <ul class="list-unstyled">
-                                            <li><a class="btn btn-success text-white mt-2" href="{{ pItem.get_absolute_url }}"><i class="fa fa-eye"></i></a></li>
-                                        </ul>
                                     </div>
                                 </div>
                                 
@@ -62,6 +60,7 @@
                                     </p>
                                 </div>
                             </div>
+                        </a>    
                         </div>
                         {% endfor %}
                     {% else %}
