--- a/ecomm/ecomm/templates/product_detail.html
+++ b/ecomm/ecomm/templates/product_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load cart_template_tags %}
 {% block content%}
 
 <!--Main layout-->
@@ -27,12 +27,14 @@
                                 {% endif %}
                             </p>
                             <p class="py-2">
-                                <i class="fa fa-star text-warning"></i>
-                                <i class="fa fa-star text-warning"></i>
-                                <i class="fa fa-star text-warning"></i>
-                                <i class="fa fa-star text-warning"></i>
-                                <i class="fa fa-star text-secondary"></i>
-                                <span class="list-inline-item text-dark">Rating 4.8 | 36 Comments</span>
+                                {% for _ in ''|center:5 %}
+                                    {% if forloop.counter0 < average_rating|default:"0"|add:"0" %}
+                                        <i class="fa fa-star text-warning"></i>
+                                    {% else %}
+                                        <i class="fa fa-star text-secondary"></i>
+                                    {% endif %}
+                                {% endfor %}
+                                <span class="list-inline-item text-dark">Rating {{ average_rating|default:"0" }} | {{ total_reviews }} Comments</span>
                             </p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
@@ -89,5 +91,59 @@
         </div>
     </section>
     <!-- Close Content -->
+    <section>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    {% if has_purchased %}
+                    <h4>Review Produk</h4>
+                    <form method="post" action="{% url 'toko:add_review' object.slug %}">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <div class="rating">
+                                <input type="radio" name="rating" id="star1" value="1">
+                                <label for="star1"><i class="fa fa-star"></i></label>
+                                <input type="radio" name="rating" id="star2" value="2">
+                                <label for="star2"><i class="fa fa-star"></i></label>
+                                <input type="radio" name="rating" id="star3" value="3">
+                                <label for="star3"><i class="fa fa-star"></i></label>
+                                <input type="radio" name="rating" id="star4" value="4">
+                                <label for="star4"><i class="fa fa-star"></i></label>
+                                <input type="radio" name="rating" id="star5" value="5">
+                                <label for="star5"><i class="fa fa-star"></i></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="review_text">Review:</label>
+                            <textarea class="form-control" name="review_text" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary my-4">Submit</button>
+                    </form>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-12">
+                    <h4>Reviews</h4>
+                    {% for review in reviews %}
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ review.user.username }}</h5>
+                                <p class="card-text">Rating: {{ review.rating }}</p>
+                                <p class="card-text">{{ review.review_text }}</p>
+                                <p class="card-text">
+                                    <small class="text-muted">
+                                        {{ review.created_at|convert_to_wib }}
+                                    </small>
+                                </p>
+                            </div>
+                        </div>
+                    {% empty %}
+                        <p>Belum ada review untuk produk ini.</p>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </section>
 <!--Main layout-->
 {% endblock content%}
