--- a/ecomm/ecomm/templates/product_detail.html
+++ b/ecomm/ecomm/templates/product_detail.html
@@ -117,7 +117,7 @@
                             <label for="review_text">Review:</label>
                             <textarea class="form-control" name="review_text" rows="3"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary my-4">Submit</button>
+                        <button type="submit" class="btn btn-success my-4">Submit</button>
                     </form>
                     {% endif %}
                 </div>
