[ADD] Centered text no address found

--- a/ecomm/ecomm/templates/address_list.html
+++ b/ecomm/ecomm/templates/address_list.html
@@ -46,7 +46,7 @@
             {% endfor %}
             {% else %}
                 <tr>
-                    <td colspan="7">No addresses added yet</td>
+                    <td colspan="7" class="text-center py-5 pb-5">No addresses added yet</td>
                 </tr>
             {% endif %}
         </tbody>
