--- a/ecomm/ecomm/templates/product_detail.html
+++ b/ecomm/ecomm/templates/product_detail.html
@@ -44,6 +44,14 @@
                                     <p class="text-muted"><strong>{{ object.get_kategori_display }}</strong></p>
                                 </li>
                             </ul>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <h6>Weight:</h6>
+                                </li>
+                                <li class="list-inline-item">
+                                    <p class="text-muted"><strong>{{ object.berat|floatformat:0 }}g</strong></p>
+                                </li>
+                            </ul>
 
                             <h6>Description:</h6>
                             <p>{{ object.deskripsi }}</p>
