--- a/ecomm/ecomm/templates/checkout.html
+++ b/ecomm/ecomm/templates/checkout.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block content%}
-<!--Main layout-->
+{% block content %}
+<!-- Main layout -->
 <main class="mt-5">
     <div class="container">
         <!-- Heading -->
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <!-- Isi berdasarkan address yang dipilih pada modal -->
+        <!-- Isi berdasarkan address yang dipilih pada modal atau yang disimpan di session -->
         <div class="card my-4 selected-address">
             <div class="card-body">
                 <div class="row">
@@ -78,15 +78,24 @@
 
         <form method="POST" name="formCheckout">
             {% csrf_token %}
-            <!--Grid row-->
+            <!-- Grid row -->
             <div class="row">
-                <!--Grid column-->
+                <!-- Grid column -->
                 <div class="col-md-8 mb-4">
-                    <!--Card-->
+                    <!-- Card -->
                     <div class="card p-4">
-                        <!--Grid row-->
-                    
-                        <!--address-->
+                        <!-- Delivery Method -->
+                        <div class="my-3">
+                            <h5>Pilih Metode Pengiriman:</h5>
+                            {% for value, name in form.fields.opsi_pengiriman.choices %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="opsi_pengiriman" id="{{ value }}" value="{{ value }}" required />
+                                <label class="form-check-label" for="{{ value }}">{{ name }}</label>
+                            </div>
+                            {% endfor %}
+                        </div>
+                        
+                        <!-- Alamat -->
                         <p class="mb-0">
                             Alamat Lengkap
                         </p>
@@ -94,7 +103,7 @@
                             {{ form.alamat_1 }}
                         </div>
 
-                        <!--address-2-->
+                        <!-- Alamat 2 -->
                         <p class="mb-0">
                             Alamat Gedung (optional)
                         </p>
@@ -102,20 +111,20 @@
                             {{ form.alamat_2 }}
                         </div>
 
-                        <!--Grid row-->
+                        <!-- Grid row -->
                         <div class="row">
-                            <!--Grid column-->
+                            <!-- Grid column -->
                             <div class="col-lg-4 col-md-12 mb-4">
                                 <p class="mb-0">
                                     Negara
                                 </p>
-                                    <div class="form-outline">
+                                <div class="form-outline">
                                     {{ form.negara }}
                                 </div>
                             </div>
-                            <!--Grid column-->
+                            <!-- Grid column -->
 
-                            <!--Grid column-->
+                            <!-- Grid column -->
                             <div class="col-lg-4 col-md-12 mb-4">
                                 <p class="mb-0">
                                     Kode Pos
@@ -124,29 +133,30 @@
                                     {{ form.kode_pos }}
                                 </div>
                             </div>
-                            <!--Grid column-->
+                            <!-- Grid column -->
                         </div>
-                        <!--Grid row-->
+                        <!-- Grid row -->
 
                         <hr />
 
+                        <!-- Payment Method -->
                         <div class="my-3">
+                            <h5>Pilih Metode Pembayaran:</h5>
                             {% for value, name in form.fields.opsi_pembayaran.choices %}
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="opsi_pembayaran" id="{{ name }}" value="{{ value }}"  required />
-                                <label class="form-check-label" for="{{ name }}">{{ name }}</label>
+                                <input class="form-check-input" type="radio" name="opsi_pembayaran" id="{{ value }}" value="{{ value }}" required />
+                                <label class="form-check-label" for="{{ value }}">{{ name }}</label>
                             </div>
                             {% endfor %}
                         </div>
                         <hr class="mb-4" />                    
-                    <button class="btn btn-primary" type="submit" {% if order.get_total_harga_order <= 0 %}disabled{% endif %}>Lanjutkan checkout</button>
+                        <button class="btn btn-primary" type="submit" {% if keranjang.get_total_harga_order <= 0 %}disabled{% endif %}>Lanjutkan checkout</button>
                     </div>
-                    <!--/.Card-->
+                    <!-- /.Card -->
                 </div>
-                <!--Grid column-->
-                
-                
-                <!--Grid column-->
+                <!-- Grid column -->
+
+                <!-- Grid column -->
                 <div class="col-md-4 mb-4">
                     <!-- Heading -->
                     <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -165,7 +175,7 @@
                             {% if belanjaan.produk_item.harga_diskon %}
                             <span class="text-muted">${{ belanjaan.get_total_harga_diskon_item }}
                             {% else %}
-                            ${{ belanjaan.get_total_harga_item}}
+                            ${{ belanjaan.get_total_harga_item }}
                             {% endif %}
                         </li>
                         {% endfor %}
@@ -177,12 +187,11 @@
                     </ul>
                     <!-- Cart -->
                 </div>
-                <!--Grid column-->
+                <!-- Grid column -->
             </div>
-            <!--Grid row-->
+            <!-- Grid row -->
         </form>
     </div>
 </main>
-<!--Main layout-->
-
+<!-- Main layout -->
 {% endblock content %}
