[ADD] History order

--- a/ecomm/ecomm/templates/base.html
+++ b/ecomm/ecomm/templates/base.html
@@ -119,6 +119,7 @@
                         <div class="dropdown-menu" aria-labelledby="profileDropdown">
                             <a class="dropdown-item" href="{% url 'toko:profile' %}">Profile</a>
                             <a class="dropdown-item" href="{% url 'toko:address_list' %}">Address</a>
+                            <a class="dropdown-item" href="{% url 'toko:order-history' %}">History Order</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                         </div>
