--- a/ecomm/ecomm/templates/carousel.html
+++ b/ecomm/ecomm/templates/carousel.html
@@ -30,7 +30,6 @@
                 </form>
             </div>
 
-
             <div class="col-lg-9">
                 <div class="row">
                     {% if object_list %}
@@ -68,29 +67,43 @@
                             <div class="text-center">
                                 <img src="{% static 'img/product-notfound.png' %}" alt="Icon product not found">
                                 <p><b>No products found.</b></p>
-
                             </div>
                         </div>
                     {% endif %}
                 </div>
                 <!-- Pagination -->
-                <!-- <div div="row">
-                    <ul class="pagination pagination-lg justify-content-end">
-                        <li class="page-item disabled">
-                            <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0" href="#"
-                                tabindex="-1">1</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark"
-                                href="#">2</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link rounded-0 shadow-sm border-top-0 border-left-0 text-dark" href="#">3</a>
-                        </li>
-                    </ul>
-                </div> -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-end">
+                                {% if object_list.has_previous %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ object_list.previous_page_number }}" aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                {% for num in object_list.paginator.page_range %}
+                                    {% if object_list.number == num %}
+                                        <li class="page-item active"><span class="page-link">{{ num }}</span></li>
+                                    {% elif num > object_list.number|add:'-5' and num < object_list.number|add:'5' %}
+                                        <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                                    {% endif %}
+                                {% endfor %}
+                                {% if object_list.has_next %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ object_list.next_page_number }}" aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
     <!-- End Content -->
